# Appetito

./: Appetito.code-workspace  CMakeLists.txt  Coding Standard.md  Communication Standard.md  LICENSE  README.md  latex.md  main.cpp
.VSCodeCounter/2023-01-02_10-54-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: Coding Standard.md  Doxyfile  文档.md
docs/doxygen_docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _coding_01_standard_8md.html  _r_e_a_d_m_e_8md.html  _xE6_x96_x87_xE6_xA1_xA3_8md.html  annotated.html  annotated_dup.js  class_client-members.html  class_client.html  class_client.js  class_client__coll__graph.map  class_client__inherit__graph.map  class_client__inherit__graph.md5  class_client_a2ac4838875e743af25125d8b5c8eba09_cgraph.map  class_client_a2ac4838875e743af25125d8b5c8eba09_icgraph.map  class_client_a6342031513d78c15335597f53b2b6783_icgraph.map  class_client_a6342031513d78c15335597f53b2b6783_icgraph.md5  class_client_a68160e11d62388970ef323781b5a7a79_cgraph.map  class_client_a68160e11d62388970ef323781b5a7a79_icgraph.map  class_client_a7f63ba90de237bc667294dac30e7f951_cgraph.map  class_client_a7f63ba90de237bc667294dac30e7f951_cgraph.md5  class_client_a7f63ba90de237bc667294dac30e7f951_icgraph.map  class_client_a7f63ba90de237bc667294dac30e7f951_icgraph.md5  class_client_ad02063b8272297ac4631db4640b3a7f6_cgraph.map  class_client_ad02063b8272297ac4631db4640b3a7f6_icgraph.map  class_client_ad02063b8272297ac4631db4640b3a7f6_icgraph.md5  class_connected_client-members.html  class_connected_client.html  class_connected_client.js  class_connected_client__coll__graph.map  class_connected_client__coll__graph.md5  class_connected_client__inherit__graph.map  class_connected_client_a0f52c6714d482a16b60621a59ea57d85_cgraph.map  class_connected_client_a0f52c6714d482a16b60621a59ea57d85_cgraph.md5  class_connected_client_a93d1deb4a214f8f9b8c7a7fe0544a084_cgraph.map  class_connected_client_a93d1deb4a214f8f9b8c7a7fe0544a084_icgraph.map  class_connected_client_a93d1deb4a214f8f9b8c7a7fe0544a084_icgraph.md5  class_connected_client_ae5736d568307f63e5f59e9eac556c262_icgraph.map  class_connected_client_ae5736d568307f63e5f59e9eac556c262_icgraph.md5  class_connected_customer_client-members.html  (+587 more)
docs/doxygen_docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _coding_01_standard_8md.tex  _r_e_a_d_m_e_8md.tex  _xE6_x96_x87_xE6_xA1_xA3_8md.tex  annotated.tex  class_client.eps  class_client.tex  class_client__coll__graph.md5  class_client_a2ac4838875e743af25125d8b5c8eba09_cgraph.md5  class_client_a2ac4838875e743af25125d8b5c8eba09_icgraph.md5  class_client_a68160e11d62388970ef323781b5a7a79_cgraph.md5  class_client_a68160e11d62388970ef323781b5a7a79_icgraph.md5  class_client_ad02063b8272297ac4631db4640b3a7f6_cgraph.md5  class_connected_client.eps  class_connected_client.tex  class_connected_client__inherit__graph.md5  class_connected_client_a93d1deb4a214f8f9b8c7a7fe0544a084_cgraph.md5  class_connected_customer_client.eps  class_connected_customer_client.tex  class_connected_customer_client__inherit__graph.md5  class_connected_customer_client_a9214ca4bb84efb0e696e38af324e3958_cgraph.md5  class_connected_customer_client_acfa89feb4a509a28f7846a93aa65e7ea_cgraph.md5  class_connected_kitchen_client.eps  class_connected_kitchen_client.tex  class_connected_kitchen_client_a56a8b0afd2fe096cada41dd13f5c5db8_cgraph.md5  class_connected_kitchen_client_ab912bb1cf580c232222620b918b79635_cgraph.md5  class_connected_kitchen_client_ab912bb1cf580c232222620b918b79635_icgraph.md5  class_console_menu.tex  class_customer_client.eps  class_customer_client.tex  class_customer_client_a76ec26816c77be84fc6fd496aae7dd4f_icgraph.md5  class_customer_client_a84d61de169a9e9ac5e81273ac4daee3f_cgraph.md5  class_customer_client_a850f948d5f749622c7311f5336b8911e_cgraph.md5  class_customer_client_a850f948d5f749622c7311f5336b8911e_icgraph.md5  class_customer_redirector.eps  class_customer_redirector.tex  class_customer_redirector__coll__graph.md5  class_customer_redirector_ad03b58d4d3cf8429fe3091dd76eb3a5a_icgraph.md5  class_customer_server.eps  (+171 more)
docs/drawing/: connect_procedure.drawio  order_procedure.drawio  procedure.drawio  structure.drawio
libs/client/include/: client.hpp
libs/client/src/: client.cpp
libs/main_app/include/: selection_menu.hpp
libs/main_app/src/: selection_menu.cpp
libs/network/include/: networkio.hpp
libs/network/src/: networkio.cpp
libs/protocol/include/: protocol.hpp
libs/restaurant_util/include/: customer_menu.hpp  customer_notif.hpp  customer_order_deal.hpp  food.hpp  kitchen_request.hpp  menu.hpp  notif.hpp  order_deal.hpp  table.hpp
libs/restaurant_util/src/: customer_menu.cpp  customer_notif.cpp  customer_order_deal.cpp  food.cpp  kitchen_request.cpp  menu.cpp  notif.cpp  order_deal.cpp  table.cpp
libs/server/src/: server.cpp  (+2 more)
src/: Client1.cpp  Server1.cpp  client_customer.cpp  client_kitchen.cpp  client_waiter.cpp  main.cpp  server_main.cpp
(+85 files in other folders)
